# xchat-gnome

./: AUTHORS  ChangeLog  ChangeLog.pre-git  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  channel-list.glade  connect-dialog.glade  dcc-window.glade  irc-network-editor.glade  preferences-dialog.glade  setup-dialog.glade  topic-change.glade  xchat-gnome-ui.xml  xchat-gnome.1  xchat-gnome.desktop.in.in  xchat-gnome.glade
data/icons/: Makefile.in
data/icons/hicolor/: Makefile.am  Makefile.in
data/icons/hicolor/128x128/: Makefile.in
data/icons/hicolor/128x128/apps/: Makefile.am  Makefile.in
data/icons/hicolor/16x16/: Makefile.in
data/icons/hicolor/16x16/apps/: Makefile.am  Makefile.in
data/icons/hicolor/22x22/: Makefile.in
data/icons/hicolor/22x22/apps/: Makefile.am  Makefile.in
data/icons/hicolor/48x48/: Makefile.in
data/icons/hicolor/48x48/apps/: Makefile.am  Makefile.in
data/icons/hicolor/scalable/: Makefile.in
data/icons/hicolor/scalable/apps/: Makefile.am  Makefile.in
help/: Makefile.am  Makefile.in
help/C/: index.docbook  legal.xml
help/ca/: ca.po  index.docbook
help/cs/: cs.po  index.docbook
help/da/: da.po  index.docbook
help/de/: de.po  index.docbook
help/el/: el.po  index.docbook
help/es/: es.po  index.docbook  legal.xml
help/fr/: fr.po  index.docbook
help/it/: index.docbook  it.po  legal.xml
help/oc/: index.docbook  oc.po
help/pt_BR/: index.docbook  legal.xml  pt_BR.po
help/sl/: index.docbook  sl.po
help/sv/: index.docbook  legal.xml  sv.po
help/th/: index.docbook  legal.xml  th.po
help/zh_CN/: index.docbook  legal.xml  zh_CN.po
plugins/: Makefile.am  Makefile.in  xchat-plugin.h  xg-plugin.h
po/: LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  az.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hu.po  is.po  it.po  ja.po  ka.po  kn.po  ko.po  ku.po  lt.po  lv.po  mk.po  mr.po  (+26 more)
src/: Makefile.am  Makefile.in
src/common/: Makefile.am  Makefile.in  cfgfiles.c  cfgfiles.h  ctcp.c  ctcp.h  dcc.c  dcc.h  fe.h  history.c  history.h  identd.c  identd.h  ignore.c  ignore.h  inbound.c  inbound.h  inet.h  modes.c  modes.h  network.c  network.h  notify.c  notify.h  outbound.c  outbound.h  plugin-timer.c  plugin-timer.h  plugin.c  plugin.h  proto-irc.c  server.c  server.h  servlist.c  servlist.h  ssl.c  ssl.h  text.c  text.h  textenums.h  (+13 more)
src/common/dbus/: Makefile.am  Makefile.in  dbus-client.c  dbus-plugin.c  example.c  org.gnome.Xchat.service.in  url_handler.schemas.in
src/fe-gnome/: Makefile.am  Makefile.in  apps_xchat.schemas.in  channel-list-window.c  channel-list-window.h  connect-dialog.c  connect-dialog.h  conversation-panel.c  conversation-panel.h  dcc-window.c  dcc-window.h  fe-gnome.c  find-bar.c  find-bar.h  gui.c  gui.h  irc-network-editor.c  irc-network-editor.h  irc-network.c  irc-network.h  main-window.c  main-window.h  migration.c  migration.h  navigation-tree.c  navigation-tree.h  palette.c  palette.h  pixmaps.c  pixmaps.h  plugins.c  plugins.h  preferences-dialog.c  preferences-dialog.h  preferences-page-colors.c  preferences-page-colors.h  preferences-page-dcc.c  preferences-page-dcc.h  preferences-page-effects.c  preferences-page-effects.h  (+32 more)
src/libcontrast/: Makefile.am  Makefile.in  contrast.c  contrast.h
