themedir = $(pkgdatadir)/icons/hicolor
category = apps
size = 16x16

icondir = $(themedir)/$(size)/$(category)
icon_DATA =					\
	xchat-gnome-dcc.png			\
	xchat-gnome-message-data.png		\
	xchat-gnome-message-new.png		\
	xchat-gnome-message-nickname-said.png	\
	xchat-gnome-plugin.png			\
	xchat-gnome-search-wrapped.png		\
	xchat-gnome-status-halfop.png		\
	xchat-gnome-status-operator.png		\
	xchat-gnome-status-voice.png		\
	xchat-gnome-users.png

EXTRA_DIST = $(icon_DATA)
