themedir = $(pkgdatadir)/icons/hicolor
category = apps
size = 22x22

icondir = $(themedir)/$(size)/$(category)
icon_DATA =					\
	xchat-gnome-message-new.png		\
	xchat-gnome-message-nickname-said.png	\
	xchat-gnome-plugin.png			\
	xchat-gnome-status-halfop.png		\
	xchat-gnome-status-operator.png		\
	xchat-gnome-users.png

EXTRA_DIST = $(icon_DATA)
